added Programatica.DummyApp.Data project

--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Programatica.DummyApp.Mvc.Models.User>
+﻿@model IEnumerable<Programatica.DummyApp.Data.Models.User>
 
 @{
     ViewBag.Title = "Index";
